регистрацию и логин игры сапер

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <div id="loginWrapper">
+        <form >
+            <h3>Введите свой логин</h3>
+              <input type="text" id="login">
+        </form>
+    </div>
     <header>
         <img src="./img/bomb.png" alt="" id="logo">
         <h1>САПЁР</h1>
