--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="loginWrapper">
         <form >
-            <h3>Введите свой логин</h3>
+            <h3>Введите свой логин Пользователь</h3>
               <input type="text" id="login">
         </form>
     </div>
